Implemented selection masks

--- a/z0_experiment.ipynb
+++ b/z0_experiment.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -37,6 +37,9 @@
    "source": [
     "### Download libraries\n",
     "#%pip install uproot\n",
+    "\n",
+    "\n",
+    "\n",
     "#%pip install awkward\n",
     "#%pip install mplhep\n",
     "#%pip install numpy\n",
@@ -58,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -118,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -172,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -191,7 +194,7 @@
        "<Figure size 432x288 with 6 Axes>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {
       "image/png": {
        "height": 278,
@@ -215,7 +218,7 @@
        "<Figure size 432x288 with 6 Axes>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {
       "image/png": {
        "height": 278,
@@ -239,7 +242,7 @@
        "<Figure size 432x288 with 6 Axes>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {
       "image/png": {
        "height": 278,
@@ -263,7 +266,7 @@
        "<Figure size 432x288 with 6 Axes>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {
       "image/png": {
        "height": 278,
@@ -297,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -310,7 +313,7 @@
        "<Figure size 432x288 with 1 Axes>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {
       "image/png": {
        "height": 262,
@@ -327,7 +330,7 @@
        "<Figure size 432x288 with 1 Axes>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {
       "image/png": {
        "height": 262,
@@ -344,7 +347,7 @@
        "<Figure size 432x288 with 1 Axes>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {
       "image/png": {
        "height": 262,
@@ -361,7 +364,7 @@
        "<Figure size 432x288 with 1 Axes>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {
       "image/png": {
        "height": 262,
@@ -378,7 +381,7 @@
        "<Figure size 432x288 with 1 Axes>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {
       "image/png": {
        "height": 262,
@@ -395,7 +398,7 @@
        "<Figure size 432x288 with 1 Axes>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {
       "image/png": {
        "height": 263,
@@ -443,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -455,7 +458,7 @@
        "<Figure size 432x288 with 1 Axes>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {
       "image/png": {
        "height": 252,
@@ -472,7 +475,7 @@
        "<Figure size 432x288 with 1 Axes>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {
       "image/png": {
        "height": 266,
@@ -504,7 +507,7 @@
     "plt.plot()\n",
     "plt.xlim(4,15)\n",
     "plt.ylim(0,2500)\n",
-    "plt.savefig('figures/selection_histogram.pdf')\n",
+    "#plt.savefig('figures/selection_histogram.pdf')\n",
     "plt.show()\n",
     "\n",
     "\n",
@@ -526,8 +529,133 @@
     "plt.legend()\n",
     "plt.xlim(-1, 100)\n",
     "plt.ylim(0,120)\n",
-    "plt.savefig('figures/selection_scatter.pdf')\n",
-    "plt.show()"
+    "#plt.savefig('figures/selection_scatter.pdf')\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "## define functions to produce the cutting mask on any dataset\n",
+    "\n",
+    "def electron_mask(dataset):\n",
+    "    return np.all((dataset['Ncharged'] <= Nmax_leptons, dataset['E_ecal'] >= Emin_ele), axis=0)\n",
+    "\n",
+    "def muon_mask(dataset):\n",
+    "    return np.all((dataset['Ncharged'] <= Nmax_leptons, dataset['E_ecal'] <= Emax_muons, dataset['Pcharged'] >= Pmin_muons), axis=0)\n",
+    "\n",
+    "def tau_mask(dataset):\n",
+    "    return np.all((dataset['Ncharged'] <= Nmax_leptons, dataset['E_ecal'] <= Emax_taus,\n",
+    "                   dataset['Pcharged'] >= Pmin_taus, dataset['Pcharged'] <= Pmax_taus), axis=0)\n",
+    "\n",
+    "def quark_mask(dataset):\n",
+    "    return dataset['Ncharged'] >= Nmin_quarks\n",
+    "\n",
+    "## Iterable array of different selection types\n",
+    "selection_masks = {'electron': electron_mask, 'muon': muon_mask, 'tau': tau_mask, 'quark': quark_mask}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out of 93802 electron-events, 86854 passed the electron-selection mask\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out of 93802 electron-events, 0 passed the muon-selection mask\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out of 93802 electron-events, 35 passed the tau-selection mask\n",
+      "Out of 93802 electron-events, 0 passed the quark-selection mask\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out of 94381 muon-events, 1 passed the electron-selection mask\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out of 94381 muon-events, 82676 passed the muon-selection mask\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out of 94381 muon-events, 992 passed the tau-selection mask\n",
+      "Out of 94381 muon-events, 0 passed the quark-selection mask\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out of 79214 tau-events, 139 passed the electron-selection mask\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out of 79214 tau-events, 220 passed the muon-selection mask\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out of 79214 tau-events, 65184 passed the tau-selection mask\n",
+      "Out of 79214 tau-events, 148 passed the quark-selection mask\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out of 98563 quark-events, 7 passed the electron-selection mask\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out of 98563 quark-events, 0 passed the muon-selection mask\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out of 98563 quark-events, 193 passed the tau-selection mask\n",
+      "Out of 98563 quark-events, 95307 passed the quark-selection mask\n"
+     ]
+    }
+   ],
+   "source": [
+    "selection_rates = np.zeros((4,4))\n",
+    "\n",
+    "for i, (particle, dataset) in enumerate(simulated_datasets.items()):\n",
+    "    for j, (rule_particle, selection_rule) in enumerate(selection_masks.items()):\n",
+    "        mask = selection_rule(dataset)\n",
+    "        selection_rates[i][j] = sum(mask)/len(mask)\n",
+    "        print(f\"Out of {len(mask)} \" + particle + f\"-events, {np.sum(mask)} passed the \" + rule_particle + \"-selection mask\")"
    ]
   },
   {
