Counted number of events for each LEP-energy

--- a/z0_experiment.ipynb
+++ b/z0_experiment.ipynb
@@ -632,22 +632,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
-    "xs_corrections = { 'energy' : [ 88.47, 89.46, 90.22, 91.22, 91.97, 92.96, 93.76] ,\n",
-    "                      'hadronic' : [2.0, 4.3, 7.7, 10.8, 4.7, -0.2, -1.6],\n",
-    "                      'leptonic' : [0.09, 0.20, 0.36, 0.52, 0.22, -0.01, -0.08]}\n",
+    "xs_corrections = pd.DataFrame({ 'energy' : [ 88.47, 89.46, 90.22, 91.22, 91.97, 92.96, 93.76] ,\n",
+    "                              'hadronic' : [2.0, 4.3, 7.7, 10.8, 4.7, -0.2, -1.6],\n",
+    "                              'leptonic' : [0.09, 0.20, 0.36, 0.52, 0.22, -0.01, -0.08]})\n",
     "\n",
     "## read csv-file of luminosity data\n",
     "file = 'opal_data/lumi_files/daten_2.csv'\n",
-    "lumi_data = pd.read_csv(file)"
+    "lumi_data = pd.read_csv(file)\n",
+    "\n",
+    "## get the seven different LEP-energies\n",
+    "LEP_energies = np.sort(OPAL_data['E_lep'].round(1).unique())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -671,92 +681,96 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>meanenergy</th>\n",
-       "      <th>lumi</th>\n",
-       "      <th>stat</th>\n",
-       "      <th>sys</th>\n",
-       "      <th>all</th>\n",
+       "      <th>e_events</th>\n",
+       "      <th>m_events</th>\n",
+       "      <th>t_events</th>\n",
+       "      <th>q_events</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>88.47777</td>\n",
-       "      <td>371.9800</td>\n",
-       "      <td>2.594937</td>\n",
-       "      <td>2.4881</td>\n",
-       "      <td>3.595044</td>\n",
+       "      <td>530.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>1968.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>89.46906</td>\n",
-       "      <td>488.5300</td>\n",
-       "      <td>3.009684</td>\n",
-       "      <td>3.2730</td>\n",
-       "      <td>4.446429</td>\n",
+       "      <td>783.0</td>\n",
+       "      <td>196.0</td>\n",
+       "      <td>178.0</td>\n",
+       "      <td>4763.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>90.22324</td>\n",
-       "      <td>378.5461</td>\n",
-       "      <td>2.670417</td>\n",
-       "      <td>2.5339</td>\n",
-       "      <td>3.681273</td>\n",
+       "      <td>708.0</td>\n",
+       "      <td>279.0</td>\n",
+       "      <td>232.0</td>\n",
+       "      <td>6777.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>91.23965</td>\n",
-       "      <td>2072.7930</td>\n",
-       "      <td>6.334670</td>\n",
-       "      <td>13.8796</td>\n",
-       "      <td>15.256840</td>\n",
+       "      <td>4497.0</td>\n",
+       "      <td>2398.0</td>\n",
+       "      <td>2104.0</td>\n",
+       "      <td>60365.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>91.96968</td>\n",
-       "      <td>540.6800</td>\n",
-       "      <td>3.274401</td>\n",
-       "      <td>3.6200</td>\n",
-       "      <td>4.881198</td>\n",
+       "      <td>908.0</td>\n",
+       "      <td>541.0</td>\n",
+       "      <td>441.0</td>\n",
+       "      <td>12717.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>92.97059</td>\n",
-       "      <td>369.4000</td>\n",
-       "      <td>2.737608</td>\n",
-       "      <td>2.4800</td>\n",
-       "      <td>3.693900</td>\n",
+       "      <td>393.0</td>\n",
+       "      <td>185.0</td>\n",
+       "      <td>181.0</td>\n",
+       "      <td>5045.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>93.71714</td>\n",
-       "      <td>353.5000</td>\n",
-       "      <td>2.695570</td>\n",
-       "      <td>2.3710</td>\n",
-       "      <td>3.589950</td>\n",
+       "      <td>371.0</td>\n",
+       "      <td>136.0</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>3408.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   meanenergy       lumi      stat      sys        all\n",
-       "0    88.47777   371.9800  2.594937   2.4881   3.595044\n",
-       "1    89.46906   488.5300  3.009684   3.2730   4.446429\n",
-       "2    90.22324   378.5461  2.670417   2.5339   3.681273\n",
-       "3    91.23965  2072.7930  6.334670  13.8796  15.256840\n",
-       "4    91.96968   540.6800  3.274401   3.6200   4.881198\n",
-       "5    92.97059   369.4000  2.737608   2.4800   3.693900\n",
-       "6    93.71714   353.5000  2.695570   2.3710   3.589950"
+       "   e_events  m_events  t_events  q_events\n",
+       "0     530.0      64.0      85.0    1968.0\n",
+       "1     783.0     196.0     178.0    4763.0\n",
+       "2     708.0     279.0     232.0    6777.0\n",
+       "3    4497.0    2398.0    2104.0   60365.0\n",
+       "4     908.0     541.0     441.0   12717.0\n",
+       "5     393.0     185.0     181.0    5045.0\n",
+       "6     371.0     136.0     122.0    3408.0"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lumi_data"
+    "## compute the number of measured events according to our selection\n",
+    "\n",
+    "# prepare array\n",
+    "events = np.zeros((4, 7))\n",
+    "\n",
+    "for p, (particle, dataset) in enumerate(measured_datasets.items()):\n",
+    "    for e, energy in enumerate(LEP_energies):\n",
+    "        \n",
+    "        events[p][e] = sum(dataset['E_lep'].round(1) == energy)   # count events\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "pd.DataFrame(events.T, columns = ['e_events', 'm_events', 't_events', 'q_events'])"
    ]
   },
   {
@@ -803,7 +817,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
