fixed weinberg angle calculation

--- a/z0_experiment.ipynb
+++ b/z0_experiment.ipynb
@@ -859,14 +859,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.24805108575238805 0.00028418705849942355\n"
+      "0.22792674555252468 0.47191349564939616\n"
      ]
     }
    ],
@@ -885,8 +885,8 @@
     "                    + ((2*forward_sim)/(forward_sim + backward_sim)**2 * u_b_sim)**2)\n",
     "\n",
     "# calculate weinberg angle and uncertainty\n",
-    "sinsq_thetaW_sim = 0.25 - AFB_sim / 12\n",
-    "u_sinsq_thetaW_sim = u_AFB_sim / 12\n",
+    "sinsq_thetaW_sim = 0.25 - np.sqrt(AFB_sim/3) / 4\n",
+    "u_sinsq_thetaW_sim = 1 / (8 * np.sqrt(3) * np.sqrt(AFB_sim))\n",
     "\n",
     "print(sinsq_thetaW_sim, u_sinsq_thetaW_sim)"
    ]
@@ -922,30 +922,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.003410244701993083"
+       "207.8725571113224"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "u_AFB_sim"
+    "u_f_sim"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 233,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "43211"
+      ]
+     },
+     "execution_count": 233,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "forward_sim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42773"
+      ]
+     },
+     "execution_count": 234,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "backward_sim"
+   ]
   },
   {
    "cell_type": "code",
