Add correction factor for unknown cos_theta values in t-/s-channel separation

--- a/z0_experiment_MyWork.ipynb
+++ b/z0_experiment_MyWork.ipynb
@@ -502,6 +502,18 @@
     "    # combine uncertainties\n",
     "    electron_s_channel_u = np.sqrt(electron_s_channel_u_1**2 + electron_s_channel_u_2**2)\n",
     "    \n",
+    "    # UPDATE - Correct for unknown angles:\n",
+    "    # There exist a certain fraction of events for which 'cos_theta' is not defined probably due to the detector electronics\n",
+    "    # being unable to reconstruct the angle properly. By creating a histogram of the 'cos_theta' values, these events are \n",
+    "    # automatically excluded from this ee event evaluation even though they are proper ee events according to the cuts we\n",
+    "    # chose above. To correct for these lost events, we multiply the resulting s-channel event number by the appropriate\n",
+    "    # factor (number of all ee events)/(number of ee events with proper 'cos_theta' value). In doing so, we assume that the\n",
+    "    # detector has no bias, i.e. the 'cos_theta' value cannot be reconstructed for a constant fraction of ee events no matter\n",
+    "    # the real (unknown) angle.\n",
+    "    factor = len(the_input_dataset) / np.sum(electron_cos_theta)\n",
+    "    electron_s_channel *= factor\n",
+    "    electron_s_channel_u *= factor\n",
+    "    \n",
     "    # print results\n",
     "    print(\"fit params:     \", t_s_popt[0], t_s_popt[1])\n",
     "    print(\"total ee events:\", np.sum(electron_cos_theta), \"+-\", np.sqrt(np.sum(electron_cos_theta)))\n",
@@ -1090,9 +1102,9 @@
     "\n",
     "#plt.ylim(0.03, 0.06)\n",
     "plt.axhline(0.052716, label=\"theory\", c=\"r\")\n",
-    "plt.legend()\n",
+    "plt.legend(loc=8)\n",
     "plt.xlabel(\"center-of-mass energy $\\\\sqrt{s}$ [$\\\\mathrm{GeV}$]\")\n",
-    "plt.ylabel(\"ratio of cross sections [$1$]\")\n",
+    "plt.ylabel(\"ratio of cross sections\")\n",
     "plt.grid()\n",
     "plt.show()"
    ]
